panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__arrays__test_sizeof_in_array_length.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/arrays/test_sizeof_in_array_length.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/arrays/test_sizeof_in_array_length.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (definition cs~3 `array<char; 4>` ∅)
         (definition xs~4 `array<int; 8>` ∅)
         (expression
            (call `int`
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>`
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int`))
               (noop-type-conversion `ptr<char const>`
                  (noop-type-conversion `ptr<char>`
                     (addressof `ptr<array<char; 9>>`
                        (string `array<char; 9>` "%zu %zu\n\0"))))
               (lengthof `unsigned long` 4 (cs~3 `array<char; 4>`))
               (lengthof `unsigned long` 8 (xs~4 `array<int; 8>`)))))))

----- stderr -----
